--- a/Tarea 1/IMT2200-25s2 - Tarea 1.ipynb
+++ b/Tarea 1/IMT2200-25s2 - Tarea 1.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "12aabf07",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "4       NaN      NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "id": "910c71d2",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5525.0\n"
+      "5525\n"
      ]
     }
    ],
@@ -394,7 +394,7 @@
     "#Para el rango, utilizamos numpy con su funcion Peak to peak\n",
     "year_variable = gameitem[\"year\"].to_numpy()\n",
     "rango = np.ptp(year_variable)\n",
-    "print(rango)"
+    "print(int(rango))"
    ]
   },
   {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "id": "f073e58e",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "id": "e09fa10b",
    "metadata": {},
    "outputs": [
@@ -481,19 +481,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "year\n",
-      "-3500.0       1\n",
-      "-3000.0       4\n",
-      "-2600.0       2\n",
-      "-2200.0       1\n",
-      "-2000.0       2\n",
-      "           ... \n",
-      " 2021.0    4693\n",
-      " 2022.0    4436\n",
-      " 2023.0    2597\n",
-      " 2024.0     261\n",
-      " 2025.0      16\n",
-      "Name: year, Length: 333, dtype: int64\n"
+      "Entre los años 2013 y 2014 estuvo el mayor aumento de publicación de juegos de mesa, con un total de 484.\n"
      ]
     }
    ],
@@ -505,7 +493,20 @@
     "recorte_info = recorte_info[\"year\"].count()\n",
     "recorte_info = recorte_info.sort_index()\n",
     "\n",
-    "print(recorte_info)\n"
+    "maximo = 0\n",
+    "inicio = None\n",
+    "ultimo = None\n",
+    "\n",
+    "for i in range(1, len(recorte_info)):\n",
+    "    actual = recorte_info.iloc[i]\n",
+    "    anterior = recorte_info.iloc[i-1]\n",
+    "    aumento = actual - anterior\n",
+    "    if aumento > maximo:\n",
+    "        maximo = aumento\n",
+    "        inicio = recorte_info.index[i-1]\n",
+    "        ultimo = recorte_info.index[i]\n",
+    "\n",
+    "print(f\"Entre los años {int(inicio)} y {int(ultimo)} estuvo el mayor aumento de publicación de juegos de mesa, con un total de {maximo}.\")"
    ]
   },
   {
