--- a/Tarea 1/IMT2200-25s2 - Tarea 1.ipynb
+++ b/Tarea 1/IMT2200-25s2 - Tarea 1.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "3499fd7e",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "87be9d83",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "12aabf07",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "4       NaN      NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,17 +337,17 @@
    "id": "030904e0",
    "metadata": {},
    "source": [
-    "El dataframe data_frame_decodificado ocupa 6.855KB. Luego, los archivos .csv separados ocupan,\n",
+    "*El dataframe data_frame_decodificado ocupa 6.855KB. Luego, los archivos .csv separados ocupan,*\n",
     "\n",
-    "- GameItem: 15.701KB\n",
-    "- Category: 2KB\n",
-    "- GameFamily: 166KB\n",
-    "- GameType: 1KB\n",
-    "- Mechanic: 5KB\n",
-    "- Person: 1.135KB\n",
-    "- Publisher: 583KB\n",
+    "*- GameItem: 15.701KB*\n",
+    "*- Category: 2KB*\n",
+    "*- GameFamily: 166KB*\n",
+    "*- GameType: 1KB*\n",
+    "*- Mechanic: 5KB*\n",
+    "*- Person: 1.135KB*\n",
+    "*- Publisher: 583KB*\n",
     "\n",
-    "Esto ocurre porque, en el caso de GameItem, esta base de datos contenía toda la información unificada, incluso con la codificación. En cambio, los otros archivos .csv solo contenían la decodificación efectiva para algunas de las columnas de bbg_GameItem.csv. Podemos notar, si entramos a los archivos, que mientras menos contenido tienen, menos KB ocupan. Esto ocurre porque se tiene una relación directa de más datos -> más espacio ocupado en el disco duro. Por esta razón, mi archivo creado data_frame_decodificado.csv ocupa más espacio que los archivos decodificadores, pero menos espacio que bbg_GameItem.csv, puesto que solo utilicé las siete columnas decodificadas de interés para su creación, en vez de las totales de GameItem."
+    "*Esto ocurre porque, en el caso de GameItem, esta base de datos contenía toda la información unificada, incluso con la codificación. En cambio, los otros archivos .csv solo contenían la decodificación efectiva para algunas de las columnas de bbg_GameItem.csv. Podemos notar, si entramos a los archivos, que mientras menos contenido tienen, menos KB ocupan. Esto ocurre porque se tiene una relación directa de más datos -> más espacio ocupado en el disco duro. Por esta razón, mi archivo creado data_frame_decodificado.csv ocupa más espacio que los archivos decodificadores, pero menos espacio que bbg_GameItem.csv, puesto que solo utilicé las siete columnas decodificadas de interés para su creación, en vez de las totales de GameItem.*"
    ]
   },
   {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "910c71d2",
    "metadata": {},
    "outputs": [
@@ -377,24 +377,36 @@
    ],
    "source": [
     "#Para limpiar los datos, se concretaran dos pasos:\n",
-    "# 1. Se eliminaran todas las filas sin ningún dato en la columna \"year\".\n",
-    "# 2. Se filtraran los datos en el rango [-3600, 2025] (para el contexto, dirigase al archivo README seccion 3.2).\n",
+    "# 1. Se eliminarán todas las filas sin ningún dato en la columna \"year\".\n",
+    "# 2. Se filtrarán los datos en el rango [-3600, 2025](*1)\n",
     "\n",
     "gameitem = pd.read_csv(\"bgg_GameItem.csv\")\n",
     "\n",
     "gameitem = gameitem[gameitem[\"year\"].notnull()]\n",
-    "gameitem = gameitem[gameitem[\"year\"] >= -3600.0]\n",
+    "gameitem = gameitem[gameitem[\"year\"] >= -3500.0]\n",
     "gameitem = gameitem[gameitem[\"year\"] <= 2025.0]\n",
     "\n",
-    "#A pesar de que el ejercicio no lo pide, decidi crear un archivo para ver que todo este correcto\n",
+    "#A pesar de que el ejercicio no lo pide, se decide crear un archivo para ver que todo este correcto:\n",
     "gameitem.to_csv(\"years_validos.csv\", index=False)\n",
     "#De forma interna, al ver que el archivo creado pesa 16.749KB en contraste a los 18.295KB de GameItem, queda\n",
-    "# claro que hubo una limpieza de algunos datos invalidos.\n",
+    "# claro que hubo una limpieza de algunos datos inválidos.\n",
     "\n",
     "#Para el rango, utilizamos numpy con su funcion Peak to peak\n",
     "year_variable = gameitem[\"year\"].to_numpy()\n",
     "rango = np.ptp(year_variable)\n",
-    "print(int(rango))"
+    "print(int(rango))\n",
+    "\n",
+    "#(*1)Para esta parte, se­ buscó de hace cuánto datan los juegos de mesa más antiguos, para eliminar \n",
+    "# cualquier dato erróneo de la base de datos que date de antes sin ninguna prueba. Además, el rango no\n",
+    "# pasa de 2025, puesto que es el año actual. A pesar del debate académico detrás, se decide tomar\n",
+    "# a Senet como el juego más antiguo que data de ~3500a.C. (las fechas varían en las publicaciones por\n",
+    "# debates arqueológicos, sin embargo se decide tomar la fuente más antigua puesto que la otra opción aceptada, \n",
+    "# The Royal Game of Ur, es un juego más actual que Senet, pero data del ~3500a.C. - ~3100a.C. también\n",
+    "# [dependiendo la fuente]). Por esta razón se decide acotar en este rango.\n",
+    "# Fuentes:\n",
+    "# https://www.britishmuseum.org/blog/top-10-historical-board-games\n",
+    "# https://en.wikipedia.org/wiki/Senet\n",
+    "# Crist, Walter. \"Debunking the Diffusion of Senet.\" Board Game Studies Journal, 2021."
    ]
   },
   {
@@ -402,9 +414,9 @@
    "id": "fb5ab0cd",
    "metadata": {},
    "source": [
-    "El rango de los años trabajados es 5525. La pregunta de si tiene sentido depende mucho de como se tome; tiene sentido porque, habiendo buscado los datos históricos, efectivamente el primer juego de mesa (descubierto hasta ahora) de la historia es Senet, que data de ~5000 años, donde se creó el primer juego de mesa, y en el código nos aseguramos que no pasara del año actual 2025. \n",
+    "*El rango de los años trabajados es 5525. La pregunta de si tiene sentido depende mucho de como se tome; tiene sentido porque, habiendo buscado los datos históricos, efectivamente el primer juego de mesa (descubierto hasta ahora) de la historia es Senet, que data de ~5000 años, donde se creó el primer juego de mesa, y en el código nos aseguramos que no pasara del año actual 2025.*\n",
     "\n",
-    "Ahora, si abordamos la pregunta consultando, \"¿para qué tienen sentido los años?\", cambia, pues dependería netamente de lo que se quiere responder el si tienen sentido, o si se debería acortar el rango en ciertos años. En resumen, dentro del contexto histórico, sí, tanto los datos como el rango tienen lógica."
+    "*Ahora, si abordamos la pregunta consultando, \"¿para qué tienen sentido los años?\", cambia, pues dependería netamente de lo que se quiere responder el si tienen sentido, o si se debería acortar el rango en ciertos años. En resumen, dentro del contexto histórico, sí, tanto los datos como el rango tienen lógica.*"
    ]
   },
   {
@@ -417,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "f073e58e",
    "metadata": {},
    "outputs": [
@@ -460,7 +472,7 @@
    "id": "3717bfd1",
    "metadata": {},
    "source": [
-    "La tendencia, entre 1800 y los 2000, parecía ser estable, no sobrepasando en cantidad los 1000 publicados por año. En el 2000, comienza a subir gradualmente hasta alcanzar su máximo en 2019, para luego bajar progresivamente hasta el año 2023, y tener una caída considerable en 2024 (~2500 en 2023, a menos de 500 en 2024). Esto, sin embargo, puede deberse a que, al ser juegos más actuales, aún no los suben a la base de datos; sin embargo, para una respuesta concreta, habría que hacer un análisis más profundo tomando en consideración la cultura, la economía, y otros factores que puedan afectar la publicación de juegos."
+    "*La tendencia, entre 1800 y los 2000, parecía ser estable, no sobrepasando en cantidad los 1000 publicados por año. En el 2000, comienza a subir gradualmente hasta alcanzar su máximo en 2019, para luego bajar progresivamente hasta el año 2023, y tener una caída considerable en 2024 (~2500 en 2023, a menos de 500 en 2024). Esto, sin embargo, puede deberse a que, al ser juegos más actuales, aún no los suben a la base de datos; sin embargo, para una respuesta concreta, habría que hacer un análisis más profundo tomando en consideración la cultura, la economía, y otros factores que puedan afectar la publicación de juegos.*"
    ]
   },
   {
@@ -473,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e09fa10b",
    "metadata": {},
    "outputs": [
@@ -486,13 +498,18 @@
     }
    ],
    "source": [
-    "#Tomaremos nuevamente el archivo de años_validos para esta pregunta\n",
+    "#Se toma nuevamente el archivo de años_validos para esta pregunta\n",
     "datos_considerados = pd.read_csv(\"years_validos.csv\")\n",
     "\n",
+    "#Igual que en la sección b), se agrupan, cuentan y ordenan los datos por años\n",
+    "# para poder trabajarlos más fácil.\n",
     "recorte_info = datos_considerados.groupby(\"year\")\n",
     "recorte_info = recorte_info[\"year\"].count()\n",
     "recorte_info = recorte_info.sort_index()\n",
     "\n",
+    "#Con un flujo de iteración sencilla se busca encontrar el máximo \"salto\" en \n",
+    "# publicación durante los años, utilizando .iloc y .index para acceder a la cant.\n",
+    "# de publicación y los años respectivamente.\n",
     "maximo = 0\n",
     "inicio = None\n",
     "ultimo = None\n",
@@ -506,6 +523,7 @@
     "        inicio = recorte_info.index[i-1]\n",
     "        ultimo = recorte_info.index[i]\n",
     "\n",
+    "#Finalmente, se imprime el resultado.\n",
     "print(f\"Entre los años {int(inicio)} y {int(ultimo)} estuvo el mayor aumento de publicación de juegos de mesa, con un total de {maximo}.\")"
    ]
   },
