--- a/Tarea 1/IMT2200-25s2 - Tarea 1.ipynb
+++ b/Tarea 1/IMT2200-25s2 - Tarea 1.ipynb
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "13730de1",
    "metadata": {},
    "outputs": [
@@ -917,7 +917,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Período</th>\n",
+       "      <th>Categoría</th>\n",
        "      <th>Cantidad</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -952,7 +952,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      Período  Cantidad\n",
+       "    Categoría  Cantidad\n",
        "0       Arena         9\n",
        "1   Chameleon         8\n",
        "2  Grand Prix         8\n",
@@ -960,7 +960,7 @@
        "4       Mafia         6"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,8 +998,11 @@
     "gameitem = gameitem.sort_values(ascending=False)\n",
     "gameitem = gameitem[:5]\n",
     "\n",
+    "#Guardar la serie para usarla en b)\n",
+    "gameitem.to_csv(\"Top5_categorías.csv\")\n",
+    "\n",
     "tabla = pd.DataFrame()\n",
-    "tabla[\"Período\"] = gameitem.index\n",
+    "tabla[\"Categoría\"] = gameitem.index\n",
     "tabla[\"Cantidad\"] = gameitem.values\n",
     "tabla.head()"
    ]
@@ -1018,7 +1021,29 @@
    "id": "325d450d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gameitem = pd.read_csv(\"bgg_GameItem.csv\")\n",
+    "categorias = pd.read_csv(\"bgg_Category.csv\")\n",
+    "top_5 = pd.read_csv(\"Top5_categorías.csv\")\n",
+    "\n",
+    "gameitem = gameitem[(gameitem[\"year\"] <= 2025) & (gameitem[\"year\"] >= 1980)]\n",
+    "\n",
+    "def decodificador(main, ref, columna_main, columna_id=\"bgg_id\", columna_nom=\"name\"):\n",
+    "    main[columna_main] = main[columna_main].astype(str)\n",
+    "    ref[columna_id] = ref[columna_id].astype(str)\n",
+    "    columnas_orginales = set(main.columns)\n",
+    "    dataframe = main.merge(ref, left_on=columna_main, right_on=columna_id, how=\"left\", \n",
+    "                           suffixes=(\"\", f\"_{columna_main}\"))\n",
+    "    dataframe[columna_main] = dataframe[columna_nom]\n",
+    "    columnas_a_eliminar = [columna_id, columna_nom, f\"{columna_id}_{columna_main}\", \n",
+    "                           f\"{columna_nom}_{columna_main}\"]\n",
+    "    columnas_a_eliminar = [c for c in columnas_a_eliminar if c in dataframe.columns]\n",
+    "    dataframe.drop(columns=columnas_a_eliminar, inplace=True)\n",
+    "    return dataframe\n",
+    "\n",
+    "gameitem = decodificador(gameitem, categorias, \"category\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1052,7 +1077,10 @@
    "id": "cdbb98fe-7278-48ee-af95-05801244c50d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "- Haciendolo más limitado en qué datos pueden agregarse\n",
+    "- limpieza por categoría debido a absurdos"
+   ]
   }
  ],
  "metadata": {
