--- a/Tarea 1/IMT2200-25s2 - Tarea 1.ipynb
+++ b/Tarea 1/IMT2200-25s2 - Tarea 1.ipynb
@@ -1488,23 +1488,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 153,
-   "id": "cdbb98fe-7278-48ee-af95-05801244c50d",
+   "cell_type": "markdown",
+   "id": "fb6ab2e8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2119323824.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[153]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m- Haciendolo más limitado en qué datos pueden agregarse\u001b[39m\n                 ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "- Haciendolo más limitado en qué datos pueden agregarse\n",
-    "- limpieza por categoría debido a absurdos"
+    "_Uno de los problemas que logré reconocer en los datos luego de haberlos estudiado es este documento, fue la cantidad de \"datos absurdos\" que se pueden llegar a encontrar. Sin una limpieza por categoría, los datos no son confiables y, por ende, no utilizables. Al momento de realizar la tarea, tuve que ir filtrando poco a poco algunos datos, pero, por ejemplo, ¿qué pasa si mi respuesta de 3.2 toma en cuenta datos con max_time <= 0? ¿Cómo se puede confiar en esos datos sin una limpieza, y cómo alteran los resultados de las gráficas? Tal vez las tendencias sigan siendo las mismas, ¿pero y si no? Por ejemplo, en todos los estudios y gráficas realizadas durante la tarea, ¿habrán datos con max_player o min_player 0 personas, o incluso personas negativas? Ya viendo que no se hizo la filtración correcta en tiempo, no podemos asegurar que ningún dato sea totalmente válido sin validarlo manualmente, asegurándonos de que caiga en rangos razonables, entonces, la libertad de poner cualquier \n",
+    "\n",
+    "- Haciendolo más limitado en qué datos pueden agregarse / limpieza por categoría debido a absurdos\n",
+    "- Estudios cerca de 2025 -> sesgo por falta de informacion\n",
+    "- Pocos datos en categoria pueden caer en error"
    ]
   }
  ],
