Tarea terminada, ahora sí

--- a/Tarea 1/IMT2200-25s2 - Tarea 1.ipynb
+++ b/Tarea 1/IMT2200-25s2 - Tarea 1.ipynb
@@ -1492,11 +1492,14 @@
    "id": "fb6ab2e8",
    "metadata": {},
    "source": [
-    "_Uno de los problemas que logré reconocer en los datos luego de haberlos estudiado es este documento, fue la cantidad de \"datos absurdos\" que se pueden llegar a encontrar. Sin una limpieza por categoría, los datos no son confiables y, por ende, no utilizables. Al momento de realizar la tarea, tuve que ir filtrando poco a poco algunos datos, pero, por ejemplo, ¿qué pasa si mi respuesta de 3.2 toma en cuenta datos con max_time <= 0? ¿Cómo se puede confiar en esos datos sin una limpieza, y cómo alteran los resultados de las gráficas? Tal vez las tendencias sigan siendo las mismas, ¿pero y si no? Por ejemplo, en todos los estudios y gráficas realizadas durante la tarea, ¿habrán datos con max_player o min_player 0 personas, o incluso personas negativas? Ya viendo que no se hizo la filtración correcta en tiempo, no podemos asegurar que ningún dato sea totalmente válido sin validarlo manualmente, asegurándonos de que caiga en rangos razonables, entonces, la libertad de poner cualquier \n",
+    "##### - Datos absurdos en algunas categorías - #####\n",
+    "_Uno de los problemas que logré reconocer en los datos luego de haberlos estudiado es este documento, fue la cantidad de \"datos absurdos\" que se pueden llegar a encontrar. Sin una limpieza por categoría, los datos no son confiables y, por ende, no utilizables. Al momento de realizar la tarea, tuve que ir filtrando poco a poco algunos datos, pero, por ejemplo, ¿qué pasa si mi respuesta de 3.2 toma en cuenta datos con max_time <= 0? ¿Cómo se puede confiar en esos datos sin una limpieza, y cómo alteran los resultados de las gráficas? Tal vez las tendencias sigan siendo las mismas, ¿pero y si no? Por ejemplo, en todos los estudios y gráficas realizadas durante la tarea, ¿habrán datos con max_player o min_player 0 personas, o incluso personas negativas? Ya viendo que no se hizo la filtración correcta en tiempo, no podemos asegurar que ningún dato sea totalmente válido sin validarlo manualmente, asegurándonos de que caiga en rangos razonables, entonces, la libertad de poner cualquier número en este tipo de categorías lo hacen un poco más desconfiable._\n",
     "\n",
-    "- Haciendolo más limitado en qué datos pueden agregarse / limpieza por categoría debido a absurdos\n",
-    "- Estudios cerca de 2025 -> sesgo por falta de informacion\n",
-    "- Pocos datos en categoria pueden caer en error"
+    "##### - Gráficas pedidas hasta el 2025 - #####\n",
+    "_Estudiar los comportamientos cerca de 2025 es algo arriesgado, puesto que la base de datos puede no estar 100% actualizada hasta este año. Esto, más que un problema, es una limitación, pues puede crear juicios erróneos debido a datos faltantes._\n",
+    "\n",
+    "##### - Pocos datos en algunas categorías - #####\n",
+    "_A pesar de la gran cantidad de datos en BGG, hay categorías con pocas respuestas no nulas lo que es, nuevamente, una limitación. Se puede estar ejerciendo juicios sesgados, debido a que la realidad podría diferir de los datos que se tiene disponible para estudiar._"
    ]
   }
  ],
